Уменьшено потребление памяти